Fix TV visibility in magic showcase by relying on image aspect ratio

--- a/scss/components/_magic-showcase.scss
+++ b/scss/components/_magic-showcase.scss
@@ -1,3 +1,5 @@
+@use '../base/tokens' as *;
+
 .magic-showcase {
   background-color: #ffe5d2;
   color: #111;
@@ -57,25 +59,42 @@
   justify-content: center;
 }
 
-.magic-showcase__tv-scene .hero__cat-wrapper {
+.magic-showcase__cat-wrapper--base {
   position: relative;
   width: 100%;
-  height: auto;
+  z-index: 1;
 }
 
-.magic-showcase__tv-scene .hero__cat-wrapper--screen {
+.magic-showcase__cat-wrapper--screen {
   position: absolute;
-  top: 0;
-  left: 0;
+  top: 0; left: 0; width: 100%; height: 100%;
+  z-index: 2;
+}
+
+.magic-showcase__cat-img {
   width: 100%;
-  height: 100%;
+  height: auto;
+  display: block;
 }
 
 .magic-showcase__slider {
-  width: 100%;
-  height: 100%;
-  position: relative;
+  position: absolute;
+  top: 19%;
+  left: 20%;
+  width: 61%;
+  height: 57%;
+  border-radius: 8px;
   overflow: hidden;
+  clip-path: polygon(4% 5%, 96% 4%, 99% 94%, 1% 95%);
+}
+
+.magic-showcase__tv-overlay {
+  position: absolute;
+  inset: 0;
+  background: url('../images/crt overlay.webp') center/cover;
+  mix-blend-mode: overlay;
+  opacity: 0.15;
+  pointer-events: none;
 }
 
 .magic-showcase__track {
